feat: 🎸 (NHSAAC-710) add check transfer endpoint
