# __external__/engines/handlers/index.ts
@@ -24,8 +24,7 @@ export const accessorsActionToReviewHandler = async (
 
   const innovationRepo = getRepository(Innovation, connectionName);
 
-  const b2ctoken = await helpers.authenticateWitGraphAPI();
-  const b2cUser = await helpers.getUserFromB2C(b2ctoken, requestUser.id);
+  const b2cUser = await helpers.getUserFromB2C(requestUser.id);
   const innovation = await innovationRepo.findOne(params.innovationId);
 
   const innovator_name = b2cUser.displayName;
@@ -62,8 +61,7 @@ export const accessorsAssignedToInnovationHandler = async (
   connectionName?: string
 ): Promise<EmailResponse[]> => {
   const emailService = new EmailService(connectionName);
-  const b2ctoken = await helpers.authenticateWitGraphAPI();
-  const b2cUser = await helpers.getUserFromB2C(b2ctoken, requestUser.id);
+  const b2cUser = await helpers.getUserFromB2C(requestUser.id);
   const qa_name = b2cUser.displayName;
   const innovation_url = parseUrl(
     params,
@@ -97,8 +95,7 @@ export const innovatorActionRequested = async (
 ): Promise<EmailResponse[]> => {
   const innovationRepo = getRepository(Innovation, connectionName);
   const emailService = new EmailService(connectionName);
-  const b2ctoken = await helpers.authenticateWitGraphAPI();
-  const b2cUser = await helpers.getUserFromB2C(b2ctoken, requestUser.id);
+  const b2cUser = await helpers.getUserFromB2C(requestUser.id);
   const innovation = await innovationRepo.findOne(params.innovationId, {
     relations: ["owner"],
   });
@@ -167,8 +164,7 @@ export const innovatorsTransferOwnershipNewUser = async (
 ): Promise<EmailResponse[]> => {
   const innovationRepo = getRepository(Innovation, connectionName);
   const emailService = new EmailService(connectionName);
-  const b2ctoken = await helpers.authenticateWitGraphAPI();
-  const b2cUser = await helpers.getUserFromB2C(b2ctoken, requestUser.id);
+  const b2cUser = await helpers.getUserFromB2C(requestUser.id);
   const innovation = await innovationRepo.findOne(params.innovationId, {
     relations: ["owner"],
   });
@@ -206,8 +202,7 @@ export const innovatorsTransferOwnershipExistingUser = async (
 ): Promise<EmailResponse[]> => {
   const innovationRepo = getRepository(Innovation, connectionName);
   const emailService = new EmailService(connectionName);
-  const b2ctoken = await helpers.authenticateWitGraphAPI();
-  const b2cUser = await helpers.getUserFromB2C(b2ctoken, requestUser.id);
+  const b2cUser = await helpers.getUserFromB2C(requestUser.id);
   const innovation = await innovationRepo.findOne(params.innovationId, {
     relations: ["owner"],
   });
@@ -246,8 +241,7 @@ export const innovatorsTransferOwnershipConfirmation = async (
 ): Promise<EmailResponse[]> => {
   const innovationRepo = getRepository(Innovation, connectionName);
   const emailService = new EmailService(connectionName);
-  const b2ctoken = await helpers.authenticateWitGraphAPI();
-  const b2cUser = await helpers.getUserFromB2C(b2ctoken, requestUser.id);
+  const b2cUser = await helpers.getUserFromB2C(requestUser.id);
   const innovation = await innovationRepo.findOne(params.innovationId, {
     relations: ["owner"],
   });
